# flash-linear-attention

./: .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  CITATION.cff  LICENSE  README.md  pyproject.toml  setup.py  test_fused_chunk.py  test_retention.py
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  feature-request.yml
.github/workflows/: issue.yml  pr.yaml  release.yml
benchmarks/: benchmark_based.py  benchmark_delta_rule.py  benchmark_fla.py  benchmark_generation.py  benchmark_gla.py  benchmark_memory.py  benchmark_retention.py  benchmark_retnet.py  benchmark_training_throughput.py
benchmarks/modules/: benchmark_cross_entropy.py  benchmark_layernorm.py
benchmarks/ops/: benchmark_abc.py  benchmark_based.py  benchmark_delta_rule.py  benchmark_fla.py  benchmark_gla.py  benchmark_gsa.py  benchmark_hgrn.py  benchmark_retention.py  benchmark_rwkv6.py  benchmark_simple_gla_vs_mamba2.py
benchmarks/triton/: benchmark_abc.py  benchmark_based.py  benchmark_fla.py  benchmark_gla.py  benchmark_retention.py
evals/: ppl.py
fla/: __init__.py  utils.py
fla/layers/: __init__.py  abc.py  attn.py  based.py  bitattn.py  delta_net.py  gated_abc.py  gated_deltanet.py  gla.py  gsa.py  hgrn.py  hgrn2.py  linear_attn.py  multiscale_retention.py  rebased.py  rwkv6.py  simple_gla.py  utils.py
retention/: __init__.py  chunk.py  chunk_fuse.py  chunk_sep.py  parallel.py
tests/: test_fused_chunk.py  test_padding.py
training/: README.md  preprocess.py  run.py  train.sh
utils/: convert_from_llama.py  convert_from_pretrained.py  convert_from_rwkv6.py
(+262 files in other folders)
